[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = [
  "poetry-core>=1.7.0",
  "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]

[tool.poetry]
authors = [
  "Mateusz Żebrak <mzebrak@syncad.com>",
  "Krzysztof Mochocki <kmochocki@syncad.com>",
]
description = "All in one package for beekeeper interaction via Python interface."
name = "beekeepy"
packages = [
  {include = "beekeepy"},
]
repository = "https://gitlab.syncad.com/hive/helpy"
source = [
  {name = "PyPI", priority = "primary"},
  {name = "gitlab-schemas", url = "https://gitlab.syncad.com/api/v4/projects/362/packages/pypi/simple", priority = "supplemental"},
  {name = "gitlab-wax", url = "https://gitlab.syncad.com/api/v4/projects/419/packages/pypi/simple", priority = "supplemental"},
  {name = "gitlab-helpy", url = "https://gitlab.syncad.com/api/v4/projects/434/packages/pypi/simple", priority = "supplemental"},
]
version = "1.25.99"  # this version is only for usage in local-tools to match test-tools dependency requirements

[tool.poetry.dependencies]
python = "^3.10"
helpy = { path = "../helpy", develop = true }


[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """
    {%- if distance == 0 and not dirty -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.substitution]
files = [
  "beekeepy/__init__.py",
]
