[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = [
  "poetry-core>=1.7.0",
  "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]

[tool.poetry]
authors = [
  "Mateusz Żebrak <mzebrak@syncad.com>",
  "Krzysztof Mochocki <kmochocki@syncad.com>",
]
description = "Easily interact with the Hive blockchain using Python."
name = "helpy"
packages = [
  {include = "helpy"},
]
repository = "https://gitlab.syncad.com/hive/helpy"
source = [
  {name = "PyPI", priority = "primary"},
  {name = "gitlab-schemas", url = "https://gitlab.syncad.com/api/v4/projects/362/packages/pypi/simple", priority = "supplemental"},
  {name = "gitlab-wax", url = "https://gitlab.syncad.com/api/v4/projects/419/packages/pypi/simple", priority = "supplemental"},
]
version = "0.0.0"

[tool.poetry.dependencies]
aiohttp = "3.9.1"
httpx = {extras = ["http2"], version = "0.23.3"}
loguru = "0.7.2"
pytest-is-running = "1.5.0"
python = "^3.10"
python-dateutil = "2.8.2"
requests = "2.27.1"
schemas = "0.0.1.dev307+6f4cbb8"
wax = "0.3.10.dev25+8044195"

[tool.poetry.group.dev.dependencies]
mypy = "1.10.0"
pre-commit = "2.21.0"
pytest = "7.2.0"
pytest-asyncio = "0.21.0"
pytest-xdist = "3.1.0"
ruff = "0.4.9"
types-python-dateutil = "2.8.19.14"
types-pyyaml = "6.0.12.4"
types-requests = "2.31.0.2"
types-pytz = "2024.2.0.20240913"

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """
    {%- if distance == 0 and not dirty -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}{{ dirty_postfix }}
    {%- endif -%}
"""

[tool.poetry-dynamic-versioning.substitution]
files = [
  "helpy/__init__.py",
]
