[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = [
  "poetry-core>=1.7.0",
  "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]

[tool.poetry]
authors = [
  "Mateusz Żebrak <mzebrak@syncad.com>",
  "Krzysztof Mochocki <kmochocki@syncad.com>",
]
description = "Pack of tools and dependencies for running helpy tests."
name = "local-tools"
packages = [
  {include = "local_tools"},
]
repository = "https://gitlab.syncad.com/hive/helpy"
source = [
  {name = "PyPI", priority = "primary"},
  {name = "gitlab-schemas", url = "https://gitlab.syncad.com/api/v4/projects/362/packages/pypi/simple", priority = "supplemental"},
  {name = "gitlab-wax", url = "https://gitlab.syncad.com/api/v4/projects/419/packages/pypi/simple", priority = "supplemental"},
]
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.10"
beekeepy = { path = "../../beekeepy", develop = true }

[tool.poetry.group.dev.dependencies]
mypy = "1.10.0"
pre-commit = "2.21.0"
pytest = "7.2.0"
pytest-asyncio = "0.21.0"
pytest-xdist = "3.1.0"
ruff = "0.4.9"
types-python-dateutil = "2.8.19.14"
types-pyyaml = "6.0.12.4"
types-requests = "2.31.0.2"
types-psutil = "6.0.0.20240901"
